# ChangeLog for sys-devel/gcc
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.577 2006/11/02 06:40:14 vapier Exp $

  02 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +files/4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch,
  gcc-4.1.1.ebuild, gcc-4.1.1-r1.ebuild:
  Apply a hackish workaround for uClibc/-Os until 4.1.2 is released.

  26 Oct 2006; <blubb@gentoo.org> gcc-3.3.2-r7.ebuild, gcc-3.4.1-r3.ebuild:
  remove unused emul-linux-x86 use flag

*gcc-4.2.0_alpha20061014 (22 Oct 2006)

  22 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  +gcc-4.2.0_alpha20061014.ebuild:
  Version bump.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> gcc-4.1.1-r1.ebuild:
  Added ~sparc-fbsd keyword.

  19 Sep 2006; Jason Wever <weeve@gentoo.org> gcc-4.1.1.ebuild,
  gcc-4.1.1-r1.ebuild:
  Added ~sparc keywords to gcc-4.1.1 ebuilds.

  09 Sep 2006; Mike Frysinger <vapier@gentoo.org> gcc-3.4.6-r1.ebuild,
  gcc-3.4.6-r2.ebuild:
  Do not force libstdc++-v3 anymore #84961.

  06 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> gcc-4.1.1-r1.ebuild:
  Re-add the ~x86-fbsd keyword, it was protoize once again.

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> ChangeLog:
  Mark gcc-4.1.1 stable on mips, with -r1 in unstable.

  05 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> gcc-4.1.1-r1.ebuild:
  Remove ~x86-fbsd keyword as there are problems building.

*gcc-4.1.1-r1 (03 Sep 2006)

  03 Sep 2006; Mike Frysinger <vapier@gentoo.org> gcc-4.1.1.ebuild,
  +gcc-4.1.1-r1.ebuild:
  Push out some fixes.

*gcc-4.2.0_alpha20060902 (03 Sep 2006)

  03 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +gcc-4.2.0_alpha20060902.ebuild:
  Bump weekly 4.2 snapshot.

  30 Aug 2006; Joshua Jackson <tsunam@gentoo.org> gcc-4.1.1.ebuild:
  Stable x86; its about time for us to get this stable

  30 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> gcc-4.1.1.ebuild:
  Stable on amd64.
