@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 3.2.1/gcc31-loop-load-final-value.patch 3324 RMD160 8bb0e9133923821daf2e9d10a27a0a1930e00bbd SHA1 c73dc6e19a76a1dcbb11a15ff5ff04b11a9f0343 SHA256 70aa8433fb19c95f334b6cbc155cae22a3b61a6892ed9e18f95860509d0091a8
 MD5 8ec9b0352d226e4693cabffe0fa5bba6 files/3.2.1/gcc31-loop-load-final-value.patch 3324
 RMD160 8bb0e9133923821daf2e9d10a27a0a1930e00bbd files/3.2.1/gcc31-loop-load-final-value.patch 3324
@@ -214,6 +217,10 @@ AUX 4.1.0/gcc-4.1.0-cross-compile.patch 1134 RMD160 70d7ba1cf19700597b812a08c7dc
 MD5 6b71690a4a020aa0604a1f8fad21151b files/4.1.0/gcc-4.1.0-cross-compile.patch 1134
 RMD160 70d7ba1cf19700597b812a08c7dcd72633a25c2a files/4.1.0/gcc-4.1.0-cross-compile.patch 1134
 SHA256 8ee57285151659793df88e025f1225b401a0c805bfc8d1685e04ef75393a24ab files/4.1.0/gcc-4.1.0-cross-compile.patch 1134
+AUX 4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch 1686 RMD160 420e02e85e261759154daf5e3c149344be57af76 SHA1 3f56dce71bf57de5abd4ed7f5549e80946ca3df3 SHA256 7547293b945808f63b70aafed644a43c99e19f82aaf1d2f2df8502d87ab3f01d
+MD5 ab66a2c85bc3324fe4f0729927f63072 files/4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch 1686
+RMD160 420e02e85e261759154daf5e3c149344be57af76 files/4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch 1686
+SHA256 7547293b945808f63b70aafed644a43c99e19f82aaf1d2f2df8502d87ab3f01d files/4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch 1686
 AUX awk/fixlafiles.awk 7865 RMD160 6283a91bfa309a91f46cbff3c1c4f0d848312ba4 SHA1 0bd923243492496eceb8ec1407ed9f4ac5ad8c1a SHA256 9fccd7f4ee7170a8f05d21777974efc3f23072f501cb7d2a8e9eeea15e541249
 MD5 fed3620378df7a876d6709ddf3f7bbec files/awk/fixlafiles.awk 7865
 RMD160 6283a91bfa309a91f46cbff3c1c4f0d848312ba4 files/awk/fixlafiles.awk 7865
@@ -344,6 +351,7 @@ DIST gcc-4.0.3-patches-1.3.tar.bz2 38806 RMD160 c2af49f0fcae41c9e5721c59fd1bf013
 DIST gcc-4.0.3-piepatches-v8.7.8.tar.bz2 6991 RMD160 c1604cc7356eedeb7b64406d691155806aa8b1da SHA1 e65fc66449c49513798561727bcb9b84d0cafb13 SHA256 4b804566409ceb133f1f8d81e935892d22f07d0aa23daed63c9dd4050a4d8081
 DIST gcc-4.0.3-uclibc-patches-1.0.tar.bz2 20192 RMD160 a426e23977dea24edb7fb1bdc7c20ec690638d16 SHA1 8e665ef73e744ecdbbfb82c7e58783351a9f7274 SHA256 e929e3b59bdf1d68d98232d9dfdde73f5728fa5c201f63ef0858130a77865be9
 DIST gcc-4.0.3.tar.bz2 32980638 RMD160 c0dd326faa6f226ee0250e059d1eac933a4b0e31 SHA1 5a94943d9ab823cf8d080cc7f9e8a4a91797afea SHA256 e866346111f4b043a784deca5afcd2fe0e9e16e97464fdff858abbfcbe28dafa
+DIST gcc-4.1-20061027.tar.bz2 37161688 RMD160 0a3ee0dd264a9bb0a4a441859e7911fad41177c0 SHA1 36d3818f5d5174e535324f19ab5aa76dc097bfd9 SHA256 ec36cbf428f42aa67c851a3bfedf0815082f6df991def9dc56115423ef23ac16
 DIST gcc-4.1.0-patches-1.7.tar.bz2 29483 RMD160 dda856227c853ce725015ea779f1c6c9752f6341 SHA1 9905592174e02f8a86d6d0ebf78520a390505dfd SHA256 6edfc473ebc9e4dd58178ff4e6aae11201e8bcc4fd17efd4fb2f08cfeb45a1fb
 DIST gcc-4.1.0-uclibc-patches-1.1.tar.bz2 20238 RMD160 173d2bf08183a8808ba253da69abeaae0127b88f SHA1 7c930086699113f6cf845539fa276e681b1ae676 SHA256 7b35927cb87f73ca98b810c1d70f9de8405c4b024c8932aabd99a0e87ed880b4
 DIST gcc-4.1.0.tar.bz2 38639061 RMD160 a0640c52a53b69b0edcf66d9dc9a95d2112e8b41 SHA1 ad6d56ddc419d464bf8ee28f5a7ac730b97ab59c SHA256 1159457a0e4c054b709547ae21ff624aebab2033e0d9e5bf46c9cf88b1970606
@@ -351,7 +359,7 @@ DIST gcc-4.1.1-patches-1.6.tar.bz2 29117 RMD160 deda1cc8917bb63e446048dff15eca32
 DIST gcc-4.1.1-patches-1.7.tar.bz2 46341 RMD160 ddf156fb6d48047ab725881ba835709fd1cab6f7 SHA1 a1f835d6a5bbee7cee64543ca43a8c3a219338f2 SHA256 0c4df9552b168ed50cc1ffcadd6369fe76b2bd16355a24969692a9503bd0a005
 DIST gcc-4.1.1-uclibc-patches-1.1.tar.bz2 20981 RMD160 ca12459f3ec8ee8a9dc5c260bea4bb20d6a80a65 SHA1 c004fbace98a1159115a81f0b733a4a248b2d096 SHA256 f97cf0f9fe52a529b41a78bb5d0d57899805fae00c3e7b2dff87c8192195b6f3
 DIST gcc-4.1.1.tar.bz2 39172003 RMD160 0edeac242d900b075a7e36796380492b5b3c8564 SHA1 a398b95d38b6e35f4c4e02c34c0a3bff79811f8f SHA256 985cbb23a486570a8783395a42a8689218f5218a0ccdd6bec590eef341367bb7
-DIST gcc-4.2-20061014.tar.bz2 40625634 RMD160 660f6d2a7ca5caf98c7dff231cc85c9ca421c862 SHA1 4f11b09ff264db6f1a523741f44dad7fe4ae6592 SHA256 ee499f2284c2def2b08b23e92ea56a09dfc5582400ebbcd7f1b22eb0eb947c24
+DIST gcc-4.2-20061031.tar.bz2 40662795 RMD160 4480ab75205b7db65f0ad60a8f9efaaa117f0bfc SHA1 b2e4fc99b7a6aeed071795b4b96a878213e0ec26 SHA256 c9f0a6538043c24e624dc6b17dcb253aa36bea251b66dd2782e739f4c394d8dd
 DIST protector-3.2.2-10.tar.gz 24556 RMD160 905b1ef473435230f7f4519ecf0f8a3d4c66e4e5 SHA1 c3a45f3fc450f1bd282af88a94d4b3d427d23072 SHA256 ad8401650ee0f7162e844cea492aa6151de77e8d0236cacc999aada69d511bab
 DIST protector-3.3-7.tar.gz 25068 RMD160 6e01b53477aec0c0b7a958827a38fcc8bee61c56 SHA1 a82aecdfb41e40b583ad93e6b23a5b558ebbc7a1 SHA256 cd285bd6f79b794bbb5e0c7f06c6c9317a0c72cb065d5c7d4283c51f06edeade
 DIST protector-3.3.2-3.tar.gz 28195 RMD160 6e6c98ab3d1ff0d16405df8dfdded0ff1f098eb2 SHA1 80826beb60747a6fb7ec7fdd1a5c1f93d625abba SHA256 e89ce49af8a088ffa790985e57bb5c2dd59328676342ddce93ae3166c2d3b9d9
@@ -433,22 +441,26 @@ EBUILD gcc-4.1.0-r1.ebuild 1755 RMD160 0161a0f7c8bbe291659a7a816e4064d3ee68264c 
 MD5 b2b0afc49a79eb7c1b8f08b15908a99c gcc-4.1.0-r1.ebuild 1755
 RMD160 0161a0f7c8bbe291659a7a816e4064d3ee68264c gcc-4.1.0-r1.ebuild 1755
 SHA256 a2177f1c5b6afd094fa2d7dbc5add355e1a6e67033133e7e1e31fff6f5e931d8 gcc-4.1.0-r1.ebuild 1755
-EBUILD gcc-4.1.1-r1.ebuild 1810 RMD160 6a47771cf93337f2e7ed8b6e4d8a625de43c960f SHA1 7d9b590c1c2194805ef4274323a44c55f6c2e5c2 SHA256 b57b865501a28f47c700652f6da8c9462111cb97c324324fe5b8c1e48fd12d86
-MD5 0573f4253f8cc961875bdf19035b10ac gcc-4.1.1-r1.ebuild 1810
-RMD160 6a47771cf93337f2e7ed8b6e4d8a625de43c960f gcc-4.1.1-r1.ebuild 1810
-SHA256 b57b865501a28f47c700652f6da8c9462111cb97c324324fe5b8c1e48fd12d86 gcc-4.1.1-r1.ebuild 1810
-EBUILD gcc-4.1.1.ebuild 1777 RMD160 3506b8a68d74d2953fb82525c7bd792388eba177 SHA1 7de3addd8de8c1851f36e1f52f5e134aff8d051d SHA256 9a03d04bf5120cae8037916e68d359e7b6762ffc2e251f2dad53cb3bf6df7593
-MD5 bc8e14b84b475bad7440d9d3d47cebd5 gcc-4.1.1.ebuild 1777
-RMD160 3506b8a68d74d2953fb82525c7bd792388eba177 gcc-4.1.1.ebuild 1777
-SHA256 9a03d04bf5120cae8037916e68d359e7b6762ffc2e251f2dad53cb3bf6df7593 gcc-4.1.1.ebuild 1777
-EBUILD gcc-4.2.0_alpha20061014.ebuild 1961 RMD160 f41aca359d68a4f29e64c66d2ea05c2bb62d1861 SHA1 4af472934c70fd3cc823f736ee6d9a52bd26b6c5 SHA256 d6977fa955dc5b668865610394205ac463d286d69a8bdff518c6aa2b01f2a9ee
-MD5 48ff67970a03bbe4032113df7532fe5f gcc-4.2.0_alpha20061014.ebuild 1961
-RMD160 f41aca359d68a4f29e64c66d2ea05c2bb62d1861 gcc-4.2.0_alpha20061014.ebuild 1961
-SHA256 d6977fa955dc5b668865610394205ac463d286d69a8bdff518c6aa2b01f2a9ee gcc-4.2.0_alpha20061014.ebuild 1961
-MISC ChangeLog 114095 RMD160 70cd289638ca2500b874058e181641b365c83867 SHA1 5fabdbbd29f938bba1ca84fab7486a69f950d85f SHA256 4e4956639aa0a696e191af6a66c92d0650af901ae0764b28212561c510543be5
-MD5 51ef46d8d7e0a9359efb30b10e52dff1 ChangeLog 114095
-RMD160 70cd289638ca2500b874058e181641b365c83867 ChangeLog 114095
-SHA256 4e4956639aa0a696e191af6a66c92d0650af901ae0764b28212561c510543be5 ChangeLog 114095
+EBUILD gcc-4.1.0_alpha20061027.ebuild 1961 RMD160 7cc5e85affcf12ce93e3f9f2dcf9ada9654e9e0a SHA1 583676f0bc674895dac54ec6ab3f7e8f64b7c186 SHA256 cf2eba0cf915d06a4da12e541baefd2813cbc894857a2e6d34dbd8ecaa96d3d2
+MD5 2ba2a37a5283682a9e916be66b6c7dc7 gcc-4.1.0_alpha20061027.ebuild 1961
+RMD160 7cc5e85affcf12ce93e3f9f2dcf9ada9654e9e0a gcc-4.1.0_alpha20061027.ebuild 1961
+SHA256 cf2eba0cf915d06a4da12e541baefd2813cbc894857a2e6d34dbd8ecaa96d3d2 gcc-4.1.0_alpha20061027.ebuild 1961
+EBUILD gcc-4.1.1-r1.ebuild 1882 RMD160 b6e47b72bdbce9acf20ad0ddb05d024e902fa799 SHA1 5098124d93867c71d5857d89e1e5be22f84da100 SHA256 2355d020d81f7920a279891285a5d07bfe4adf0b83b724d74465e674ac66f06d
+MD5 1b855aa1a8d7b73b09bb6863a7879b80 gcc-4.1.1-r1.ebuild 1882
+RMD160 b6e47b72bdbce9acf20ad0ddb05d024e902fa799 gcc-4.1.1-r1.ebuild 1882
+SHA256 2355d020d81f7920a279891285a5d07bfe4adf0b83b724d74465e674ac66f06d gcc-4.1.1-r1.ebuild 1882
+EBUILD gcc-4.1.1.ebuild 1852 RMD160 19dbbb365237906b1f55ab1c7b2e04ed1eddc81d SHA1 8c553ab71388e5d34d7353f82f3cf4b9a005f650 SHA256 6c1cc516aabeaf701b7ea95d4580501db3fa752c239f2626e3670b2494b2712e
+MD5 fcb9713d9103d38a80590a0523d11f8e gcc-4.1.1.ebuild 1852
+RMD160 19dbbb365237906b1f55ab1c7b2e04ed1eddc81d gcc-4.1.1.ebuild 1852
+SHA256 6c1cc516aabeaf701b7ea95d4580501db3fa752c239f2626e3670b2494b2712e gcc-4.1.1.ebuild 1852
+EBUILD gcc-4.2.0_alpha20061031.ebuild 1961 RMD160 57eba3ae0d717f5a8c74c6ba18ec45a0625d0773 SHA1 37f34de61b8d17137282759396926f3d1f509074 SHA256 5267b5064287b59652977e07e15d68bcb5635d9daf66092f24410fc31faa1afb
+MD5 5997e97b7459d661aa08c3d4a40cd2f1 gcc-4.2.0_alpha20061031.ebuild 1961
+RMD160 57eba3ae0d717f5a8c74c6ba18ec45a0625d0773 gcc-4.2.0_alpha20061031.ebuild 1961
+SHA256 5267b5064287b59652977e07e15d68bcb5635d9daf66092f24410fc31faa1afb gcc-4.2.0_alpha20061031.ebuild 1961
+MISC ChangeLog 114536 RMD160 5709ec1e89dd989acacd21564a881c25f755e3f9 SHA1 38499889802026facd18bef0e11a6181070c34b0 SHA256 8347a3402bf49f452b9ada48224302cc4a82876812a61a1a05dfe73e1d5c1596
+MD5 fcb9a08b3e75b07fb7d4d05a5cacd4ee ChangeLog 114536
+RMD160 5709ec1e89dd989acacd21564a881c25f755e3f9 ChangeLog 114536
+SHA256 8347a3402bf49f452b9ada48224302cc4a82876812a61a1a05dfe73e1d5c1596 ChangeLog 114536
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
 MD5 567094e03359ffc1c95af7356395228d metadata.xml 162
 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 metadata.xml 162
@@ -510,12 +522,22 @@ SHA256 6d920f64c4a6949a047f6da14638df614455738aa08687870973cbb9b6052b77 files/di
 MD5 99b67fb212dea998995389ea861e9020 files/digest-gcc-4.1.0-r1 789
 RMD160 d116ba253df56c49f7c38337cb3c897ee6a45991 files/digest-gcc-4.1.0-r1 789
 SHA256 9254e7d582b114e5b560065442baa8f8030106293cc26ab5bd642834697283b9 files/digest-gcc-4.1.0-r1 789
+MD5 acfb873114d01e09d7eef010a1f6b004 files/digest-gcc-4.1.0_alpha20061027 259
+RMD160 e79a32d908fac1ddff358f8f294365abd6cbe0ae files/digest-gcc-4.1.0_alpha20061027 259
+SHA256 599e128d5188ffd43e90eebe7be43a34407e88b8771aa5f0a3bf50fb70843c8d files/digest-gcc-4.1.0_alpha20061027 259
 MD5 45f2c3d5b166161fcd4c30e2a342f3cc files/digest-gcc-4.1.1 789
 RMD160 4e9ecc293787720e9e5f13ff932fd2c7cc0bda65 files/digest-gcc-4.1.1 789
 SHA256 a4c88b13a87fa8fd4035e066d0db9ae7b2c6af93cdaf58e66aaf0a03f13fe590 files/digest-gcc-4.1.1 789
 MD5 6f5a6df037552f87b8c60bc8a56530a6 files/digest-gcc-4.1.1-r1 789
 RMD160 900527410587f41caadb208f48dd260b354317f1 files/digest-gcc-4.1.1-r1 789
 SHA256 4cd44f2492b0816fee5211f5dd0734661cc4d28ecbc273a8597858cfe2d69469 files/digest-gcc-4.1.1-r1 789
-MD5 a061990d6753b0afde91acb0cb0f66f9 files/digest-gcc-4.2.0_alpha20061014 259
-RMD160 b2befc99e9a2bdf5e2045d4df308809f2d956587 files/digest-gcc-4.2.0_alpha20061014 259
-SHA256 5db1841d776a9edddfdb667e08989944d50928bdd3253f199fa9938c081b3552 files/digest-gcc-4.2.0_alpha20061014 259
+MD5 c5555f117cf5dcac88d16ae0a0dca544 files/digest-gcc-4.2.0_alpha20061031 259
+RMD160 f7afef733239faf367b864b518e80cec41f47d09 files/digest-gcc-4.2.0_alpha20061031 259
+SHA256 a6dc84a8c8314d83786d4985e6af564c4f4632fdbc04afa51fdd7ceef260b546 files/digest-gcc-4.2.0_alpha20061031 259
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFSZNAamhnQswr0vIRAhSLAJ0df4jrqIJb9pUvAknuHQ0DG0gEGQCgtfRB
+2qmTMICmVWbI1wSEWOVeWdg=
+=in7t
+-----END PGP SIGNATURE-----
