@@ -1,0 +1,3 @@
+MD5 f77606b3751c8393e5d4d6473cb709c7 gcc-4.1-20061027.tar.bz2 37161688
+RMD160 0a3ee0dd264a9bb0a4a441859e7911fad41177c0 gcc-4.1-20061027.tar.bz2 37161688
+SHA256 ec36cbf428f42aa67c851a3bfedf0815082f6df991def9dc56115423ef23ac16 gcc-4.1-20061027.tar.bz2 37161688
