@@ -1,0 +1,3 @@
+MD5 e1c9738efde17462a7b38820760b1492 gcc-4.2-20061031.tar.bz2 40662795
+RMD160 4480ab75205b7db65f0ad60a8f9efaaa117f0bfc gcc-4.2-20061031.tar.bz2 40662795
+SHA256 c9f0a6538043c24e624dc6b17dcb253aa36bea251b66dd2782e739f4c394d8dd gcc-4.2-20061031.tar.bz2 40662795
