@@ -1,6 +1,13 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.577 2006/11/02 06:40:14 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.578 2006/11/02 06:41:50 vapier Exp $
+
+*gcc-4.2.0_alpha20061031 (02 Nov 2006)
+*gcc-4.1.0_alpha20061027 (02 Nov 2006)
+
+  02 Nov 2006; Mike Frysinger <vapier@gentoo.org>
+  +gcc-4.1.0_alpha20061027.ebuild, +gcc-4.2.0_alpha20061031.ebuild:
+  Update snapshots.
 
   02 Nov 2006; Mike Frysinger <vapier@gentoo.org>
   +files/4.1.0/gcc-4.1.0-fast-math-i386-Os-workaround.patch,
